# ezgit-rs

./: .gitignore  Cargo.toml  README.md
src/: app_state.rs  events.rs  git_commands.rs  input.rs  lib.rs  logger.rs  main.rs
